--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 						<li class="main-nav__dropdown-item"><a href="#">Акция 3</a></li>
 					</ul></li>
 
-					<li class="main-nav__item"><a href="#">Поддержка</a></li>
-					<li class="main-nav__item"><a href="#">Партнёрам</a></li>
+					<li class="main-nav__item main-nav__item--hider"><a href="#">Поддержка</a></li>
+					<li class="main-nav__item main-nav__item--hider"><a href="#">Партнёрам</a></li>
 					<li class="main-nav__item main-nav__item--arrow main-nav__item--fifth"><a href="#">О нас</a>
 
 						<div class="main-nav__dropdown main-nav__dropdown--fifth hidden">
@@ -65,7 +65,7 @@
 	<section class="slider">
 		<div class="slide">
 			<div class="slide__image-wrapper">
-				<!-- <img src="img/slide-image.png" alt="slide" class="slide__image"> -->
+				<img src="img/slide-image.png" alt="slide" class="slide__image">
 			</div>
 			<div class="slide__wrapper">
 				<div class="slide__text">
@@ -78,7 +78,7 @@
 
 		<div class="slide">
 			<div class="slide__image-wrapper">
-				<!-- <img src="img/slide-image.png" alt="slide" class="slide__image"> -->
+				<img src="img/slide-image.png" alt="slide" class="slide__image">
 			</div>
 			<div class="slide__wrapper">
 				<div class="slide__text">
@@ -90,118 +90,113 @@
 		</div>
 	</section>
 
-	<section class="viking-background">
-		<section class="tabs">
-			<div class="tabs__wrapper">
+	<section class="tabs">
+		<div class="tabs__wrapper">
 
-				<div class="switchers">
-					<div class="switchers__switcher switchers__switcher--first switchers__switcher--active"><div class="switchers__image switchers__image--first"></div>Лобби</div>
-					<div class="switchers__switcher switchers__switcher--second"><div class="switchers__image switchers__image--second"></div>Слоты</div>
-					<div class="switchers__switcher switchers__switcher--third"><div class="switchers__image switchers__image--third"></div>Джекпоты</div>
-					<div class="switchers__switcher switchers__switcher--fourth"><div class="switchers__image switchers__image--fourth"></div>Настольные</div>
-					<div class="switchers__switcher switchers__switcher--fifth"><div class="switchers__image switchers__image--fifth"></div>Live диллер</div>
-				</div>
+			<div class="switchers">
+				<div class="switchers__switcher switchers__switcher--first switchers__switcher--active"><div class="switchers__image switchers__image--first"></div>Лобби</div>
+				<div class="switchers__switcher switchers__switcher--second"><div class="switchers__image switchers__image--second"></div>Слоты</div>
+				<div class="switchers__switcher switchers__switcher--third"><div class="switchers__image switchers__image--third"></div>Джекпоты</div>
+				<div class="switchers__switcher switchers__switcher--fourth"><div class="switchers__image switchers__image--fourth"></div>Настольные</div>
+				<div class="switchers__switcher switchers__switcher--fifth"><div class="switchers__image switchers__image--fifth"></div>Live диллер</div>
+			</div>
 
-				<div class="tabs__selector">Провайдер</div>
+			<div class="tabs__selector">Провайдер</div>
 
-				<div class="tab tab--first tab--active">
-					<h2 class="tab__header">Самые популярные игры</h2>
-					<button class="tab__button">Случайная игра</button>
+			<div class="tab tab--first tab--active">
+				<h2 class="tab__header">Самые популярные игры</h2>
+				<button class="tab__button">Случайная игра</button>
 
-					<div class="tab__variants-wrapper">
-						<div class="tab__variant">1</div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-					</div>
-				</div>
-
-				<div class="tab tab--second">
-					<h2 class="tab__header">Самые популярные игры</h2>
-					<button class="tab__button">Случайная игра</button>
-
-					<div class="tab__variants-wrapper">
-						<div class="tab__variant">2</div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-					</div>
-				</div>
-
-				<div class="tab tab--third">
-					<h2 class="tab__header">Самые популярные игры</h2>
-					<button class="tab__button">Случайная игра</button>
-
-					<div class="tab__variants-wrapper">
-						<div class="tab__variant">3</div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-					</div>
-				</div>
-
-				<div class="tab tab--fourth">
-					<h2 class="tab__header">Самые популярные игры</h2>
-					<button class="tab__button">Случайная игра</button>
-
-					<div class="tab__variants-wrapper">
-						<div class="tab__variant">4</div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-					</div>
-				</div>
-
-				<div class="tab tab--fifth">
-					<h2 class="tab__header">Самые популярные игры</h2>
-					<button class="tab__button">Случайная игра</button>
-
-					<div class="tab__variants-wrapper">
-						<div class="tab__variant">5</div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-					</div>
-				</div>
-			</div>		
-		</section>
-
-		<section class="jackpot">
-			<div class="jackpot__wrapper">
-				<h1 class="jackpot__header">$ 10 000 000,45</h1>
-				<h2 class="jackpot__underheader">Общий джекпот</h2>
-				<button class="jackpot__button">Показать игры с джекпотом</button>
-				<span class="jackpot__background-text">#ничоси</span>
-				<div class="jackpot__image-wrapper">
-					<img src="img/viking.png" alt="viking" class="jackpot__image">
+				<div class="tab__variants-wrapper">
+					<div class="tab__variant">1</div>
+					<div class="tab__variant"></div>
+					<div class="tab__variant"></div>
+					<div class="tab__variant"></div>
+					<div class="tab__variant"></div>
+					<div class="tab__variant"></div>
+					<div class="tab__variant"></div>
+					<div class="tab__variant"></div>
+					<div class="tab__variant"></div>
 				</div>
 			</div>
-		</section>
+
+			<div class="tab tab--second">
+				<h2 class="tab__header">Самые популярные игры</h2>
+				<button class="tab__button">Случайная игра</button>
+
+				<div class="tab__variants-wrapper">
+					<div class="tab__variant">2</div>
+					<div class="tab__variant"></div>
+					<div class="tab__variant"></div>
+					<div class="tab__variant"></div>
+					<div class="tab__variant"></div>
+					<div class="tab__variant"></div>
+					<div class="tab__variant"></div>
+					<div class="tab__variant"></div>
+					<div class="tab__variant"></div>
+				</div>
+			</div>
+
+			<div class="tab tab--third">
+				<h2 class="tab__header">Самые популярные игры</h2>
+				<button class="tab__button">Случайная игра</button>
+
+				<div class="tab__variants-wrapper">
+					<div class="tab__variant">3</div>
+					<div class="tab__variant"></div>
+					<div class="tab__variant"></div>
+					<div class="tab__variant"></div>
+					<div class="tab__variant"></div>
+					<div class="tab__variant"></div>
+					<div class="tab__variant"></div>
+					<div class="tab__variant"></div>
+					<div class="tab__variant"></div>
+				</div>
+			</div>
+
+			<div class="tab tab--fourth">
+				<h2 class="tab__header">Самые популярные игры</h2>
+				<button class="tab__button">Случайная игра</button>
+
+				<div class="tab__variants-wrapper">
+					<div class="tab__variant">4</div>
+					<div class="tab__variant"></div>
+					<div class="tab__variant"></div>
+					<div class="tab__variant"></div>
+					<div class="tab__variant"></div>
+					<div class="tab__variant"></div>
+					<div class="tab__variant"></div>
+					<div class="tab__variant"></div>
+					<div class="tab__variant"></div>
+				</div>
+			</div>
+
+			<div class="tab tab--fifth">
+				<h2 class="tab__header">Самые популярные игры</h2>
+				<button class="tab__button">Случайная игра</button>
+
+				<div class="tab__variants-wrapper">
+					<div class="tab__variant">5</div>
+					<div class="tab__variant"></div>
+					<div class="tab__variant"></div>
+					<div class="tab__variant"></div>
+					<div class="tab__variant"></div>
+					<div class="tab__variant"></div>
+					<div class="tab__variant"></div>
+					<div class="tab__variant"></div>
+					<div class="tab__variant"></div>
+				</div>
+			</div>
+		</div>		
+	</section>
+
+	<section class="jackpot">
+		<div class="jackpot__wrapper">
+			<h1 class="jackpot__header">$ 10 000 000,45</h1>
+			<h2 class="jackpot__underheader">Общий джекпот</h2>
+			<button class="jackpot__button">Показать игры с джекпотом</button>
+			<span class="jackpot__background-text">#ничоси</span>
+		</div>
 	</section>
 
 	<section class="last-winners">
