--- a/blog.html
+++ b/blog.html
@@ -43,8 +43,8 @@
 						<li class="main-nav__dropdown-item"><a href="#">Акция 3</a></li>
 					</ul></li>
 
-					<li class="main-nav__item"><a href="#">Поддержка</a></li>
-					<li class="main-nav__item"><a href="#">Партнёрам</a></li>
+					<li class="main-nav__item main-nav__item--hider"><a href="#">Поддержка</a></li>
+					<li class="main-nav__item main-nav__item--hider"><a href="#">Партнёрам</a></li>
 					<li class="main-nav__item main-nav__item--arrow main-nav__item--fifth"><a href="#">О нас</a>
 
 						<div class="main-nav__dropdown main-nav__dropdown--fifth hidden">
@@ -70,6 +70,7 @@
 			</div>
 
 			<div class="news">
+				<img src="img/news-photo.jpg" alt="" class="news__photo">
 				<div class="news__header-wrapper">
 					<h2 class="news__header">Lorem ipsum dolor sit amet consectetur adipiscing elit</h2>
 				</div>
@@ -77,6 +78,7 @@
 			</div>
 
 			<div class="news">
+				<img src="img/news-photo.jpg" alt="" class="news__photo">
 				<div class="news__header-wrapper">
 					<h2 class="news__header">Lorem ipsum dolor sit amet consectetur adipiscing elit</h2>
 				</div>
@@ -84,6 +86,7 @@
 			</div>
 
 			<div class="news">
+				<img src="img/news-photo.jpg" alt="" class="news__photo">
 				<div class="news__header-wrapper">
 					<h2 class="news__header">Lorem ipsum dolor sit amet consectetur adipiscing elit</h2>
 				</div>
@@ -91,6 +94,7 @@
 			</div>
 
 			<div class="news">
+				<img src="img/news-photo.jpg" alt="" class="news__photo">
 				<div class="news__header-wrapper">
 					<h2 class="news__header">Lorem ipsum dolor sit amet consectetur adipiscing elit</h2>
 				</div>
@@ -98,6 +102,7 @@
 			</div>
 
 			<div class="news">
+				<img src="img/news-photo.jpg" alt="" class="news__photo">
 				<div class="news__header-wrapper">
 					<h2 class="news__header">Lorem ipsum dolor sit amet consectetur adipiscing elit</h2>
 				</div>
@@ -105,6 +110,7 @@
 			</div>
 
 			<div class="news">
+				<img src="img/news-photo.jpg" alt="" class="news__photo">
 				<div class="news__header-wrapper">
 					<h2 class="news__header">Lorem ipsum dolor sit amet consectetur adipiscing elit</h2>
 				</div>
@@ -115,6 +121,7 @@
 		<div class="blog-slider">
 			<div class="blog-slider__wrapper">
 				<div class="blog-slider__slide">
+					<img src="img/slide-image.png" alt="" class="blog-slider__image">
 					<div class="blog-slider__text-wrapper">
 						<h2 class="blog-slider__header">100% кэшбек</h2>
 						<span class="blog-slider__text">Розыгрыш каждую неделю</span>
@@ -123,6 +130,7 @@
 				</div>
 
 				<div class="blog-slider__slide">
+					<img src="img/slide-image.png" alt="" class="blog-slider__image">
 					<div class="blog-slider__text-wrapper">
 						<h2 class="blog-slider__header">100% кэшбек</h2>
 						<span class="blog-slider__text">Розыгрыш каждую неделю</span>
@@ -134,6 +142,7 @@
 
 		<div class="blog__wrapper">
 			<div class="news">
+				<img src="img/news-photo.jpg" alt="" class="news__photo">
 				<div class="news__header-wrapper">
 					<h2 class="news__header">Lorem ipsum dolor sit amet consectetur adipiscing elit</h2>
 				</div>
@@ -141,6 +150,7 @@
 			</div>
 
 			<div class="news">
+				<img src="img/news-photo.jpg" alt="" class="news__photo">
 				<div class="news__header-wrapper">
 					<h2 class="news__header">Lorem ipsum dolor sit amet consectetur adipiscing elit</h2>
 				</div>
@@ -148,6 +158,7 @@
 			</div>
 
 			<div class="news">
+				<img src="img/news-photo.jpg" alt="" class="news__photo">
 				<div class="news__header-wrapper">
 					<h2 class="news__header">Lorem ipsum dolor sit amet consectetur adipiscing elit</h2>
 				</div>
@@ -155,6 +166,7 @@
 			</div>
 
 			<div class="news">
+				<img src="img/news-photo.jpg" alt="" class="news__photo">
 				<div class="news__header-wrapper">
 					<h2 class="news__header">Lorem ipsum dolor sit amet consectetur adipiscing elit</h2>
 				</div>
@@ -162,6 +174,7 @@
 			</div>
 
 			<div class="news">
+				<img src="img/news-photo.jpg" alt="" class="news__photo">
 				<div class="news__header-wrapper">
 					<h2 class="news__header">Lorem ipsum dolor sit amet consectetur adipiscing elit</h2>
 				</div>
@@ -169,11 +182,12 @@
 			</div>
 
 			<div class="news">
+				<img src="img/news-photo.jpg" alt="" class="news__photo">
 				<div class="news__header-wrapper">
 					<h2 class="news__header">Lorem ipsum dolor sit amet consectetur adipiscing elit</h2>
 				</div>
 				<a href="#" class="news__button">Подробнее</a>
-			</div>
+			</div>			
 
 			<div class="blog-pagination">
 				<div class="blog-pagination__wrapper">
@@ -310,37 +324,37 @@
 		</div>
 	</div>
 
-<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+	<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
 
-<script type="text/javascript" src="js/slick.min.js"></script>
+	<script type="text/javascript" src="js/slick.min.js"></script>
 
-<script type="text/javascript">
-	$('.blog-slider__wrapper').slick({
-		infinite: true,
-		autoplay: true,
-		autoplaySpeed: 3000,
-		slidesToShow: 1,
-		arrows: true,
-		responsive: [
-		{
-			breakpoint: 768,
-			settings: {
-				infinite: true,
-				autoplay: true,
-				autoplaySpeed: 3000,
-				slidesToShow: 1,
-				arrows: false
+	<script type="text/javascript">
+		$('.blog-slider__wrapper').slick({
+			infinite: true,
+			autoplay: true,
+			autoplaySpeed: 3000,
+			slidesToShow: 1,
+			arrows: true,
+			responsive: [
+			{
+				breakpoint: 768,
+				settings: {
+					infinite: true,
+					autoplay: true,
+					autoplaySpeed: 3000,
+					slidesToShow: 1,
+					arrows: false
+				}
 			}
-		}
-		]
-	});
-</script>
+			]
+		});
+	</script>
 
-<script type="text/javascript" src="js/tabs.js"></script>
+	<script type="text/javascript" src="js/tabs.js"></script>
 
-<script type="text/javascript" src="js/mobile-menu.js"></script>
+	<script type="text/javascript" src="js/mobile-menu.js"></script>
 
-<script type="text/javascript" src="js/fixes-bar.js"></script>
+	<script type="text/javascript" src="js/fixes-bar.js"></script>
 
 </body>
 </html>
