new header, many other fixes

--- a/blog-one-news.html
+++ b/blog-one-news.html
@@ -16,13 +16,23 @@
 		<div class="header__wrapper">
 
 			<nav class="main-nav">
-				<a href="#" class="main-nav__logo"></a>
 
 				<div class="main-nav__menu-button">
 					<div class="main-nav__menu-line"></div>
 					<div class="main-nav__menu-line"></div>
 					<div class="main-nav__menu-line"></div>
 				</div>
+
+				<button class="main-nav__mobile-reg">Регистрация</button>
+
+				<a href="index.html" class="main-nav__logo"></a>
+
+				<button class="main-nav__mobile-enter">Вход</button>
+
+				<form action="#" class="main-nav__search-form">
+				<div class="main-nav__magnifier"></div>
+					<input type="search" class="main-nav__search-field">
+				</form>
 
 				<ul class="main-nav__list">
 					<li class="main-nav__item main-nav__item--arrow main-nav__item--first"><a href="#">Игры</a>
@@ -44,7 +54,7 @@
 					</ul></li>
 
 					<li class="main-nav__item main-nav__item--hider"><a href="#">Поддержка</a></li>
-					<li class="main-nav__item main-nav__item--hider"><a href="#">Партнёрам</a></li>
+					<li class="main-nav__item main-nav__item--hider"><a href="partners.html">Партнёрам</a></li>
 					<li class="main-nav__item main-nav__item--arrow main-nav__item--fifth"><a href="#">О нас</a>
 
 						<div class="main-nav__dropdown main-nav__dropdown--fifth hidden">
