--- a/blog.html
+++ b/blog.html
@@ -16,13 +16,23 @@
 		<div class="header__wrapper">
 
 			<nav class="main-nav">
-				<a href="#" class="main-nav__logo"></a>
 
 				<div class="main-nav__menu-button">
 					<div class="main-nav__menu-line"></div>
 					<div class="main-nav__menu-line"></div>
 					<div class="main-nav__menu-line"></div>
 				</div>
+
+				<button class="main-nav__mobile-reg">Регистрация</button>
+
+				<a href="index.html" class="main-nav__logo"></a>
+
+				<button class="main-nav__mobile-enter">Вход</button>
+
+				<form action="#" class="main-nav__search-form">
+				<div class="main-nav__magnifier"></div>
+					<input type="search" class="main-nav__search-field">
+				</form>
 
 				<ul class="main-nav__list">
 					<li class="main-nav__item main-nav__item--arrow main-nav__item--first"><a href="#">Игры</a>
@@ -44,7 +54,7 @@
 					</ul></li>
 
 					<li class="main-nav__item main-nav__item--hider"><a href="#">Поддержка</a></li>
-					<li class="main-nav__item main-nav__item--hider"><a href="#">Партнёрам</a></li>
+					<li class="main-nav__item main-nav__item--hider"><a href="partners.html">Партнёрам</a></li>
 					<li class="main-nav__item main-nav__item--arrow main-nav__item--fifth"><a href="#">О нас</a>
 
 						<div class="main-nav__dropdown main-nav__dropdown--fifth hidden">
@@ -74,7 +84,7 @@
 				<div class="news__header-wrapper">
 					<h2 class="news__header">Lorem ipsum dolor sit amet consectetur adipiscing elit</h2>
 				</div>
-				<a href="#" class="news__button">Подробнее</a>
+				<a href="blog-one-news.html" class="news__button">Подробнее</a>
 			</div>
 
 			<div class="news">
@@ -82,7 +92,7 @@
 				<div class="news__header-wrapper">
 					<h2 class="news__header">Lorem ipsum dolor sit amet consectetur adipiscing elit</h2>
 				</div>
-				<a href="#" class="news__button">Подробнее</a>
+				<a href="blog-one-news.html" class="news__button">Подробнее</a>
 			</div>
 
 			<div class="news">
@@ -90,7 +100,7 @@
 				<div class="news__header-wrapper">
 					<h2 class="news__header">Lorem ipsum dolor sit amet consectetur adipiscing elit</h2>
 				</div>
-				<a href="#" class="news__button">Подробнее</a>
+				<a href="blog-one-news.html" class="news__button">Подробнее</a>
 			</div>
 
 			<div class="news">
@@ -98,7 +108,7 @@
 				<div class="news__header-wrapper">
 					<h2 class="news__header">Lorem ipsum dolor sit amet consectetur adipiscing elit</h2>
 				</div>
-				<a href="#" class="news__button">Подробнее</a>
+				<a href="blog-one-news.html" class="news__button">Подробнее</a>
 			</div>
 
 			<div class="news">
@@ -106,7 +116,7 @@
 				<div class="news__header-wrapper">
 					<h2 class="news__header">Lorem ipsum dolor sit amet consectetur adipiscing elit</h2>
 				</div>
-				<a href="#" class="news__button">Подробнее</a>
+				<a href="blog-one-news.html" class="news__button">Подробнее</a>
 			</div>
 
 			<div class="news">
@@ -114,7 +124,7 @@
 				<div class="news__header-wrapper">
 					<h2 class="news__header">Lorem ipsum dolor sit amet consectetur adipiscing elit</h2>
 				</div>
-				<a href="#" class="news__button">Подробнее</a>
+				<a href="blog-one-news.html" class="news__button">Подробнее</a>
 			</div>
 		</div>
 
@@ -123,8 +133,6 @@
 				<div class="blog-slider__slide">
 					<img src="img/slide-image.png" alt="" class="blog-slider__image">
 					<div class="blog-slider__text-wrapper">
-						<h2 class="blog-slider__header">100% кэшбек</h2>
-						<span class="blog-slider__text">Розыгрыш каждую неделю</span>
 						<button class="blog-slider__button">Подробнее</button>
 					</div>
 				</div>
@@ -132,8 +140,6 @@
 				<div class="blog-slider__slide">
 					<img src="img/slide-image.png" alt="" class="blog-slider__image">
 					<div class="blog-slider__text-wrapper">
-						<h2 class="blog-slider__header">100% кэшбек</h2>
-						<span class="blog-slider__text">Розыгрыш каждую неделю</span>
 						<button class="blog-slider__button">Подробнее</button>
 					</div>
 				</div>
@@ -146,7 +152,7 @@
 				<div class="news__header-wrapper">
 					<h2 class="news__header">Lorem ipsum dolor sit amet consectetur adipiscing elit</h2>
 				</div>
-				<a href="#" class="news__button">Подробнее</a>
+				<a href="blog-one-news.html" class="news__button">Подробнее</a>
 			</div>
 
 			<div class="news">
@@ -154,7 +160,7 @@
 				<div class="news__header-wrapper">
 					<h2 class="news__header">Lorem ipsum dolor sit amet consectetur adipiscing elit</h2>
 				</div>
-				<a href="#" class="news__button">Подробнее</a>
+				<a href="blog-one-news.html" class="news__button">Подробнее</a>
 			</div>
 
 			<div class="news">
@@ -162,7 +168,7 @@
 				<div class="news__header-wrapper">
 					<h2 class="news__header">Lorem ipsum dolor sit amet consectetur adipiscing elit</h2>
 				</div>
-				<a href="#" class="news__button">Подробнее</a>
+				<a href="blog-one-news.html" class="news__button">Подробнее</a>
 			</div>
 
 			<div class="news">
@@ -170,7 +176,7 @@
 				<div class="news__header-wrapper">
 					<h2 class="news__header">Lorem ipsum dolor sit amet consectetur adipiscing elit</h2>
 				</div>
-				<a href="#" class="news__button">Подробнее</a>
+				<a href="blog-one-news.html" class="news__button">Подробнее</a>
 			</div>
 
 			<div class="news">
@@ -178,7 +184,7 @@
 				<div class="news__header-wrapper">
 					<h2 class="news__header">Lorem ipsum dolor sit amet consectetur adipiscing elit</h2>
 				</div>
-				<a href="#" class="news__button">Подробнее</a>
+				<a href="blog-one-news.html" class="news__button">Подробнее</a>
 			</div>
 
 			<div class="news">
@@ -186,7 +192,7 @@
 				<div class="news__header-wrapper">
 					<h2 class="news__header">Lorem ipsum dolor sit amet consectetur adipiscing elit</h2>
 				</div>
-				<a href="#" class="news__button">Подробнее</a>
+				<a href="blog-one-news.html" class="news__button">Подробнее</a>
 			</div>			
 
 			<div class="blog-pagination">
