--- a/index.html
+++ b/index.html
@@ -16,13 +16,23 @@
 		<div class="header__wrapper">
 
 			<nav class="main-nav">
-				<a href="#" class="main-nav__logo"></a>
 
 				<div class="main-nav__menu-button">
 					<div class="main-nav__menu-line"></div>
 					<div class="main-nav__menu-line"></div>
 					<div class="main-nav__menu-line"></div>
 				</div>
+
+				<button class="main-nav__mobile-reg">Регистрация</button>
+
+				<a href="index.html" class="main-nav__logo"></a>
+
+				<button class="main-nav__mobile-enter">Вход</button>
+
+				<form action="#" class="main-nav__search-form">
+				<div class="main-nav__magnifier"></div>
+					<input type="search" class="main-nav__search-field">
+				</form>
 
 				<ul class="main-nav__list">
 					<li class="main-nav__item main-nav__item--arrow main-nav__item--first"><a href="#">Игры</a>
@@ -44,7 +54,7 @@
 					</ul></li>
 
 					<li class="main-nav__item main-nav__item--hider"><a href="#">Поддержка</a></li>
-					<li class="main-nav__item main-nav__item--hider"><a href="#">Партнёрам</a></li>
+					<li class="main-nav__item main-nav__item--hider"><a href="partners.html">Партнёрам</a></li>
 					<li class="main-nav__item main-nav__item--arrow main-nav__item--fifth"><a href="#">О нас</a>
 
 						<div class="main-nav__dropdown main-nav__dropdown--fifth hidden">
@@ -69,8 +79,6 @@
 			</div>
 			<div class="slide__wrapper">
 				<div class="slide__text">
-					<span class="slide__upper-text">Розыгрыш каждую неделю</span>
-					<h1 class="slide__header">100% кэшбэк</h1>
 					<button class="slide__button">Подробнее</button>
 				</div>
 			</div>
@@ -82,8 +90,6 @@
 			</div>
 			<div class="slide__wrapper">
 				<div class="slide__text">
-					<span class="slide__upper-text">Розыгрыш каждую неделю</span>
-					<h1 class="slide__header">100% кэшбэк</h1>
 					<button class="slide__button">Подробнее</button>
 				</div>
 			</div>
@@ -118,6 +124,8 @@
 					<div class="tab__variant"></div>
 					<div class="tab__variant"></div>
 				</div>
+
+				<div class="tab__more-button">Показать больше</div>
 			</div>
 
 			<div class="tab tab--second">
@@ -135,6 +143,8 @@
 					<div class="tab__variant"></div>
 					<div class="tab__variant"></div>
 				</div>
+
+				<div class="tab__more-button">Показать больше</div>
 			</div>
 
 			<div class="tab tab--third">
@@ -152,6 +162,8 @@
 					<div class="tab__variant"></div>
 					<div class="tab__variant"></div>
 				</div>
+
+				<div class="tab__more-button">Показать больше</div>
 			</div>
 
 			<div class="tab tab--fourth">
@@ -169,6 +181,8 @@
 					<div class="tab__variant"></div>
 					<div class="tab__variant"></div>
 				</div>
+
+				<div class="tab__more-button">Показать больше</div>
 			</div>
 
 			<div class="tab tab--fifth">
@@ -186,6 +200,8 @@
 					<div class="tab__variant"></div>
 					<div class="tab__variant"></div>
 				</div>
+
+				<div class="tab__more-button">Показать больше</div>
 			</div>
 		</div>		
 	</section>
@@ -240,7 +256,7 @@
 
 	<section class="popular-games">
 		<div class="popular-games__wrapper">
-			<h2 class="popular-gamnes__header">Самые популярные игры</h2>
+			<h2 class="popular-gamnes__header">Новые игры</h2>
 			<button class="popular-games__button">Случайная игра</button>
 
 			<div class="games-preview">
