--- a/blog-one-news.html
+++ b/blog-one-news.html
@@ -213,7 +213,7 @@
 
 	<footer class="footer">
 		<div class="footer__wrapper">
-			<div class="footer__copyright">Копирайт 2к17</div>
+			<div class="footer__copyright"></div>
 			<div class="footer__development">
 				<span class="footer__developer">Разработка сайта: </span> 
 				<img src="img/crepla-logo.png" alt="crepla" class="footer__crepla-logo">
