--- a/blog-one-news.html
+++ b/blog-one-news.html
@@ -38,9 +38,10 @@
 					<li class="main-nav__item main-nav__item--arrow main-nav__item--first"><a href="#">Игры</a>
 
 						<ul class="main-nav__dropdown main-nav__dropdown--first hidden">
-							<li class="main-nav__dropdown-item"><a href="#">Игра 1</a></li>
-							<li class="main-nav__dropdown-item"><a href="#">Игра 2</a></li>
-							<li class="main-nav__dropdown-item"><a href="#">Игра 3</a></li>
+							<li class="main-nav__dropdown-item"><a href="#">NetEnt</a></li>
+							<li class="main-nav__dropdown-item"><a href="#">Amatic</a></li>
+							<li class="main-nav__dropdown-item"><a href="#">Ezugi</a></li>
+							<li class="main-nav__dropdown-item"><a href="#">Softswiss</a></li>
 						</ul>
 					</li>
 
@@ -57,9 +58,10 @@
 					<li class="main-nav__item main-nav__item--hider"><a href="partners.html">Партнёрам</a></li>
 					<li class="main-nav__item main-nav__item--arrow main-nav__item--fifth"><a href="#">О нас</a>
 
-						<div class="main-nav__dropdown main-nav__dropdown--fifth hidden">
-							<p>Здесь всё о нас</p>
-						</div>
+						<ul class="main-nav__dropdown main-nav__dropdown--fifth hidden">
+							<li class="main-nav__dropdown-item"><a href="#">О DarkSlot</a></li>
+							<li class="main-nav__dropdown-item"><a href="blog.html">Блог</a></li>
+						</ul>
 
 					</li>
 				</ul>
@@ -197,6 +199,7 @@
 
 	<section class="partners">
 		<div class="partners__wrapper">
+		<img src="img/partners.png" alt="">
 			<!-- <ul class="partners__list">
 				<li class="partners__item">VISA</li>
 				<li class="partners__item">VISA</li>
