--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<title>Dark Slot</title>
 	<link rel="shortcut icon" href="img/favicon.png" type="image/png">
 	<link rel="stylesheet" href="css/style.min.css">
@@ -30,9 +30,10 @@
 				<button class="main-nav__mobile-enter">Вход</button>
 
 				<form action="#" class="main-nav__search-form">
-				<div class="main-nav__magnifier"></div>
+					<!-- <div class="main-nav__magnifier"></div> -->
 					<input type="search" class="main-nav__search-field">
 				</form>
+				<div class="main-nav__search-close"></div>
 
 				<ul class="main-nav__list">
 					<li class="main-nav__item main-nav__item--arrow main-nav__item--first"><a href="#">Игры</a>
@@ -199,10 +200,13 @@
 
 			<div class="blog-pagination">
 				<div class="blog-pagination__wrapper">
+				<div class="blog-pagination__page blog-pagination__page--prev"><span></span></div>
 					<div class="blog-pagination__page blog-pagination__page--active"><span>1</span></div>
 					<div class="blog-pagination__page"><span>2</span></div>
+					<div class="blog-pagination__page"><span>...</span></div>
 					<div class="blog-pagination__page"><span>3</span></div>
 					<div class="blog-pagination__page"><span>4</span></div>
+					<div class="blog-pagination__page blog-pagination__page--next"><span></span></div>
 				</div>
 			</div>
 		</div>
@@ -280,7 +284,7 @@
 
 	<section class="partners">
 		<div class="partners__wrapper">
-		<img src="img/partners.png" alt="">
+			<img src="img/partners.png" alt="">
 			<!-- <ul class="partners__list">
 				<li class="partners__item">VISA</li>
 				<li class="partners__item">VISA</li>
@@ -300,7 +304,7 @@
 			<div class="footer__copyright"></div>
 			<div class="footer__development">
 				<span class="footer__developer">Разработка сайта: </span> 
-				<img src="img/crepla-logo.png" alt="crepla" class="footer__crepla-logo">
+				<a href="http://www.crepla.com/" target="blank"><img src="img/crepla-logo.png" alt="crepla" class="footer__crepla-logo"></a>
 			</div>
 		</div>
 	</footer>
@@ -314,6 +318,7 @@
 			<div class="fixed-bar__top-games-button"><p>Топ-игры</p></div>
 			<form action="#" class="search">
 				<input type="search" class="search__field" placeholder="Поиск">
+				<div class="search__close"></div>
 			</form>
 			<div class="fixed-bar__chat"><p>Онлайн-чат</p></div>
 			<div class="fixed-bar__language"><p>Русский</p></div>
@@ -357,13 +362,21 @@
 			}
 			]
 		});
+
+		$('.top-games__wrapper').slick({
+			infinite: true,
+			autoplay: true,
+			autoplaySpeed: 3000,
+			slidesToShow: 7,
+			arrows: false
+		});
 	</script>
 
 	<script type="text/javascript" src="js/tabs.js"></script>
 
 	<script type="text/javascript" src="js/mobile-menu.js"></script>
 
-	<script type="text/javascript" src="js/fixes-bar.js"></script>
+	<script type="text/javascript" src="js/fixed-bar.js"></script>
 
 </body>
 </html>
