--- a/blog.html
+++ b/blog.html
@@ -18,9 +18,9 @@
 			<nav class="main-nav">
 
 				<div class="main-nav__menu-button">
-					<div class="main-nav__menu-line"></div>
-					<div class="main-nav__menu-line"></div>
-					<div class="main-nav__menu-line"></div>
+					<div id="first-line" class="main-nav__menu-line"></div>
+					<div id="second-line" class="main-nav__menu-line"></div>
+					<div id="third-line" class="main-nav__menu-line"></div>
 				</div>
 
 				<button class="main-nav__mobile-reg">Регистрация</button>
@@ -30,13 +30,12 @@
 				<button class="main-nav__mobile-enter">Вход</button>
 
 				<form action="#" class="main-nav__search-form">
-					<!-- <div class="main-nav__magnifier"></div> -->
 					<input type="search" class="main-nav__search-field">
 				</form>
 				<div class="main-nav__search-close"></div>
 
 				<ul class="main-nav__list">
-					<li class="main-nav__item main-nav__item--arrow main-nav__item--first"><a href="#">Игры</a>
+					<li class="main-nav__item main-nav__item--arrow main-nav__item--first"><a href="#" class="">Игры</a>
 
 						<ul class="main-nav__dropdown main-nav__dropdown--first hidden">
 							<li class="main-nav__dropdown-item"><a href="#">NetEnt</a></li>
@@ -204,7 +203,6 @@
 					<div class="blog-pagination__page blog-pagination__page--active"><span>1</span></div>
 					<div class="blog-pagination__page"><span>2</span></div>
 					<div class="blog-pagination__page"><span>...</span></div>
-					<div class="blog-pagination__page"><span>3</span></div>
 					<div class="blog-pagination__page"><span>4</span></div>
 					<div class="blog-pagination__page blog-pagination__page--next"><span></span></div>
 				</div>
@@ -334,6 +332,8 @@
 					<div class="top-games__slide">7</div>
 					<div class="top-games__slide">8</div>
 				</div>
+
+				<div class="top-games__close"><p>Закрыть</p></div>
 			</div>
 		</div>
 	</div>
