--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 			<nav class="main-nav">
 
 				<div class="main-nav__menu-button">
-					<div class="main-nav__menu-line"></div>
-					<div class="main-nav__menu-line"></div>
-					<div class="main-nav__menu-line"></div>
+					<div id="first-line" class="main-nav__menu-line"></div>
+					<div id="second-line" class="main-nav__menu-line"></div>
+					<div id="third-line" class="main-nav__menu-line"></div>
 				</div>
 
 				<button class="main-nav__mobile-reg">Регистрация</button>
@@ -30,13 +30,12 @@
 				<button class="main-nav__mobile-enter">Вход</button>
 
 				<form action="#" class="main-nav__search-form">
-					<!-- <div class="main-nav__magnifier"></div> -->
 					<input type="search" class="main-nav__search-field">
 				</form>
 				<div class="main-nav__search-close"></div>
 
 				<ul class="main-nav__list">
-					<li class="main-nav__item main-nav__item--arrow main-nav__item--first"><a href="#">Игры</a>
+					<li class="main-nav__item main-nav__item--arrow main-nav__item--first"><span>Игры</span>
 
 						<ul class="main-nav__dropdown main-nav__dropdown--first hidden">
 							<li class="main-nav__dropdown-item"><a href="#">NetEnt</a></li>
@@ -46,8 +45,7 @@
 						</ul>
 					</li>
 
-					<li class="main-nav__item main-nav__item--arrow main-nav__item--second"><a href="#">Акции
-					</a>
+					<li class="main-nav__item main-nav__item--arrow main-nav__item--second"><span>Акции</span>
 
 					<ul class="main-nav__dropdown main-nav__dropdown--second hidden">
 						<li class="main-nav__dropdown-item"><a href="#">Акция 1</a></li>
@@ -57,7 +55,7 @@
 
 					<li class="main-nav__item main-nav__item--hider"><a href="#">Поддержка</a></li>
 					<li class="main-nav__item main-nav__item--hider"><a href="partners.html">Партнёрам</a></li>
-					<li class="main-nav__item main-nav__item--arrow main-nav__item--fifth"><a href="#">О нас</a>
+					<li class="main-nav__item main-nav__item--arrow main-nav__item--fifth"><span>О нас</span>
 
 						<ul class="main-nav__dropdown main-nav__dropdown--fifth hidden">
 							<li class="main-nav__dropdown-item"><a href="#">О DarkSlot</a></li>
@@ -110,15 +108,14 @@
 				<div class="switchers__switcher switchers__switcher--fifth"><div class="switchers__image switchers__image--fifth"></div>Live диллер</div>
 			</div>
 
-			<div class="tabs__select">Провайдер</div>
-
-			<!-- <form action="#">
+			<form action="#" class="tabs__select-form">
 				<select name="provider" id="provider" class="tabs__select">
-					<option value="Провайдер 1"></option>
-					<option value="Провайдер 2"></option>
-					<option value="Провайдер 3"></option>
+					<option value="NetEnt">NetEnt</option>
+					<option value="Amatic">Amatic</option>
+					<option value="Ezugi">Ezugi</option>
+					<option value="Softswiss">Softswiss</option>
 				</select>
-			</form> -->
+			</form>
 
 			<div class="tab tab--first tab--active">
 				<h2 class="tab__header">Топ игры</h2>
@@ -406,7 +403,13 @@
 				<div class="search__close"></div>
 			</form>
 			<div class="fixed-bar__chat"><p>Онлайн-чат</p></div>
-			<div class="fixed-bar__language"><p>Русский</p></div>
+
+			<form action="#">
+				<select name="language" id="language" class="fixed-bar__language">
+					<option value="russian">Русский</option>
+					<option value="not-russian">Не русский</option>
+				</select>
+			</form>
 
 			<div class="top-games hidden">
 				<div class="top-games__wrapper">
@@ -419,6 +422,8 @@
 					<div class="top-games__slide">7</div>
 					<div class="top-games__slide">8</div>
 				</div>
+
+				<div class="top-games__close"><p>Закрыть</p></div>
 			</div>
 		</div>
 	</div>
