updated slider on mobile. minified images

--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
 		</div>
 	</div>
 
-	<div id="preloader"></div>
+	<!-- <div id="preloader"></div> -->
 
 	<script type="text/javascript">
 		var preloader = document.getElementById("preloader");
