--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 						</ul>
 					</li>
 
-					<li class="main-nav__item main-nav__item--hider"><a href="#">Поддержка</a></li>
+					<li class="main-nav__item main-nav__item--hider"><a href="support.html">Поддержка</a></li>
 					<li class="main-nav__item main-nav__item--hider"><a href="partners.html">Партнёрам</a></li>
 					<li class="main-nav__item main-nav__item--arrow main-nav__item--fifth"><span>О нас</span>
 
@@ -110,7 +110,7 @@
 			</div>
 
 			<form action="#" class="tabs__select-form">
-			<span class="tabs__provider">Провайдер:</span>
+				<span class="tabs__provider">Провайдер:</span>
 				<select name="provider" id="provider" class="tabs__select">
 					<option value="NetEnt">NetEnt</option>
 					<option value="Amatic">Amatic</option>
@@ -358,10 +358,6 @@
 			<div class="games__social">
 				<span class="games__text">Следите за нами</span>
 				<div class="games__fake-social"></div>
-				<!-- <li class="games__social-item games__social-item--fb"></li>
-				<li class="games__social-item games__social-item--tw"></li>
-				<li class="games__social-item games__social-item--inst"></li>
-				<li class="games__social-item games__social-item--yt"></li> -->
 			</div>
 		</div>
 	</section>
@@ -369,17 +365,6 @@
 	<section class="partners">
 		<div class="partners__wrapper">
 			<img src="img/partners.png" alt="">
-			<!-- <ul class="partners__list">
-				<li class="partners__item">VISA</li>
-				<li class="partners__item">VISA</li>
-				<li class="partners__item">VISA</li>
-				<li class="partners__item">VISA</li>
-				<li class="partners__item">VISA</li>
-				<li class="partners__item">VISA</li>
-				<li class="partners__item">VISA</li>
-				<li class="partners__item">VISA</li>
-				<li class="partners__item">VISA</li>
-			</ul> -->
 		</div>
 	</section>
 
@@ -430,7 +415,60 @@
 		</div>
 	</div>
 
-	<!-- <div id="preloader"></div> -->
+	<section class="modal-registration">
+		<div class="modal-registration__character-wrapper">
+			<img src="img/rat.png" alt="" class="modal-registration__character">
+		</div>
+
+		<form action="#" class="registration-form">
+			<h2 class="registration-form__header">Регистрация</h2>
+			<input type="email" name="email" placeholder="Email" class="registration-form__name">
+			<input type="text" name="surname" placeholder="Фамилия" class="registration-form__surname">
+			<input type="password" name="password" placeholder="Пароль" class="registration-form__password">
+			<select name="currency" id="currency" class="registration-form__currency">
+				<option value="Валюта" selected disabled>Валюта</option>
+				<option value="$">$</option>
+				<option value="$$">$$</option>
+				<option value="$$$">$$$</option>
+			</select>
+			<input type="password" name="password-confirm" placeholder="Подтверждение пароля" class="registration-form__password-confirm">
+			<input type="text" name="code" placeholder="Бонусный код" class="registration-form__code">
+
+			<div class="registration-form__checkbox-wrapper">
+				<input type="checkbox" id="reg-checkbox" class="registration-form__checkbox">
+				<label for="reg-checkbox" class="registration-form__label-checkbox">Мне есть 18 лет и я принимаю Положения и условия</label>
+			</div>
+
+			<input type="submit" value="Регистрация" class="registration-form__button">
+		</form>
+
+		<div class="modal-registration__close"></div>
+	</section>
+
+	<section class="modal-enter">
+		<div class="modal-enter__character-wrapper">
+			<img src="img/bear.png" alt="" class="modal-enter__character">
+		</div>
+
+		<div class="modal-enter__wrapper">
+
+			<form action="#" class="enter-form">
+				<h2 class="enter-form__header">Авторизация</h2>
+
+				<input type="email" class="enter-form__email" placeholder="Email">
+				<input type="password" class="enter-form__password" placeholder="Пароль">
+				<input type="button" class="enter-form__button" value="Войти">
+			</form>
+
+			<a href="#" class="modal-enter__forgot-pass">Я забыл пароль</a>
+		</div>
+
+		<div class="modal-enter__close"></div>
+	</section>
+
+	<div class="modal-bg"></div> 
+
+	<div id="preloader"></div>
 
 	<script type="text/javascript">
 		var preloader = document.getElementById("preloader");
@@ -487,6 +525,8 @@
 	<script type="text/javascript" src="js/mobile-menu.js"></script>
 
 	<script type="text/javascript" src="js/fixed-bar.js"></script>
+
+	<script type="text/javascript" src="js/modals.js"></script>
 
 </body>
 </html>
